fix: Fix time-tracking spacing for large screens

--- a/client/components/App/PlayControls/Scrubber.scss
+++ b/client/components/App/PlayControls/Scrubber.scss
@@ -51,4 +51,8 @@
       }
     }
   }
+
+  .time-tracking > div {
+    margin: 0 2rem;
+  }
 }
